# libcurrennt

./: .gitignore  CMakeLists.txt
currennt/: currennt.vcxproj
currennt_lib/: currennt_lib.vcxproj
currennt_lib/src/: NeuralNetwork.hpp
currennt_lib/src/helpers/: Matrix.cu
currennt_lib/src/layers/: BinaryClassificationLayer.cu  CePostOutputLayer.cu  MulticlassClassificationLayer.cu  RmsePostOutputLayer.cu  SoftmaxLayer.cu  SseMaskPostOutputLayer.cu  SsePostOutputLayer.cu  TrainableLayer.cu  WeightedSsePostOutputLayer.cu
examples/speech_recognition_chime/no_subsampling/: config.cfg
tests/test1/: trained_network.jsn
